# foss4g-2025

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  search.json
.github/workflows/: _publish.yml
R/: plots.R  street-polar.R
python/: main.py  momepy_metrics.py
quarto/: _quarto.yml  basics.qmd  index.qmd  morphometrics.qmd  references.bib  references.qmd  typologies_akl.qmd  typologies_wgtn.qmd
quarto/_site/: index.html
